--- a/experimental/templates/cluster/nnic/prod_stack/static/f5_bigip_cluster_n_nic.yaml
+++ b/experimental/templates/cluster/nnic/prod_stack/static/f5_bigip_cluster_n_nic.yaml
@@ -216,6 +216,20 @@ parameters:
     description: The list of Neutron Fixed IPs that will be configured as a self ip on the BIG-IP VLAN
     default:
       -
+  bigip1_mgmt_IP:
+    type: string
+    label: BIG-IP Instance One Management IP
+    description: Fixed Static IP address for the BIG-IP instance one
+    default: None
+    constraints:
+      - custom_constraint: ip_addr
+  bigip2_mgmt_IP:
+    type: string
+    label: BIG-IP Instance Two Management IP
+    description: Fixed Static IP address for the BIG-IP instance two
+    default: None
+    constraints:
+      - custom_constraint: ip_addr
   network_vlan_names_cluster_index:
     type: number
     label: OS Neutron VLAN Index for Cluster Fixed IP
@@ -460,6 +474,9 @@ resources:
     type: OS::Neutron::Port
     properties:
       network: { get_param: mgmt_network }
+      fixed_ips:
+        - subnet_id: {get_param: mgmt_subnet}
+          ip_address: {get_param: bigip1_mgmt_IP}
       security_groups:
         - { get_attr: [mgmt_security_group, mgmt_security_group_id] }
   bigip_nnic_handler_bigip1:
@@ -615,6 +632,9 @@ resources:
     type: OS::Neutron::Port
     properties:
       network: { get_param: mgmt_network }
+      fixed_ips:
+        - subnet_id: {get_param: mgmt_subnet}
+          ip_address: {get_param: bigip2_mgmt_IP}
       security_groups:
         - { get_attr: [mgmt_security_group, mgmt_security_group_id] }
   bigip_nnic_handler_bigip2:
