--- a/experimental/templates/cluster/nnic/prod_stack/static/f5_bigip_cluster_n_nic.yaml
+++ b/experimental/templates/cluster/nnic/prod_stack/static/f5_bigip_cluster_n_nic.yaml
@@ -485,6 +485,7 @@ resources:
       bigip_nic_count: { get_param: bigip_nic_count }
       network_vlan_names: { get_param: network_vlan_names }
       network_vlan_subnets: { get_param: [network_vlan_subnets, 0] }
+      network_vlan_static_self_ips: { get_param: [network_vlan_static_self_ips, 0] }
       network_vlan_security_group_ids: { get_attr: [security_groups, security_group_id] }
       bigip_vlan_names: { get_param: bigip_vlan_names }
       bigip_vlan_tags: { get_param: bigip_vlan_tags }
@@ -643,6 +644,7 @@ resources:
       bigip_nic_count: { get_param: bigip_nic_count }
       network_vlan_names: { get_param: network_vlan_names }
       network_vlan_subnets: { get_param: [network_vlan_subnets, 1] }
+      network_vlan_static_self_ips: { get_param: [network_vlan_static_self_ips, 1] }
       network_vlan_security_group_ids: { get_attr: [security_groups, security_group_id] }
       bigip_vlan_names: { get_param: bigip_vlan_names }
       bigip_vlan_tags: { get_param: bigip_vlan_tags }
