--- a/experimental/networks/bigip_nnic_handler.yaml
+++ b/experimental/networks/bigip_nnic_handler.yaml
@@ -15,6 +15,12 @@ parameters:
     type: comma_delimited_list
     label: OS Neutron Subnets to map to the BIG-IP VLANs
     description: The Neutron Subnets for the corresponding BIG-IP VLANs.
+  network_vlan_static_self_ips:
+    type: comma_delimited_list
+    label: Fixed IPs to map to the BIG-IP
+    description: Fixed IPs for the corresponding VLANs.
+    default:
+      -
   network_vlan_security_group_ids:
     type: comma_delimited_list
     label: Security Group IDs
@@ -63,6 +69,7 @@ resources:
       count: { get_param: bigip_nic_count }
       network_names: { get_param: network_vlan_names }
       network_subnets: { get_param: network_vlan_subnets }
+      network_static_self_ips: { get_param: network_vlan_static_self_ips }
       security_group_ids: { get_param: network_vlan_security_group_ids }
 
   onboard_network_config:
