--- a/experimental/networks/bigip_neutron_ports.yaml
+++ b/experimental/networks/bigip_neutron_ports.yaml
@@ -19,6 +19,12 @@ parameters:
     type: comma_delimited_list
     label: Network Subnets
     description: A list of subnets the ports should be created in
+  network_static_self_ips:
+    type: comma_delimited_list
+    label: Fixed IPs to map to the BIG-IP
+    description: Fixed IPs for the corresponding VLANs.
+    default:
+      -
 
 resources:
   network_vlan_ports:
@@ -31,6 +37,7 @@ resources:
           index: "%index%"
           network_names: { get_param: network_names }
           network_subnets: { get_param: network_subnets }
+          network_static_self_ips: { get_param: network_static_self_ips }
           security_groups: { get_param: security_group_ids }
 
 outputs:
