--- a/experimental/templates/cluster/nnic/prod_stack/static/f5_bigip_cluster_n_nic.yaml
+++ b/experimental/templates/cluster/nnic/prod_stack/static/f5_bigip_cluster_n_nic.yaml
@@ -1,4 +1,5 @@
-heat_template_version: 2016-04-08
+heat_template_version: newton
+#heat_template_version: 2016-04-08
 description: This template deploys standard f5 BIG-IP VE - NNIC instances in a config-sync cluster.
 parameters:
   bigip_image:
@@ -194,6 +195,7 @@ parameters:
     description: Network Subnet to which the BIG-IP management interface is attached.
     constraints:
       - custom_constraint: neutron.subnet
+    default: None
   mgmt_security_group_name:
     type: string
     label: Management Security Group Name
@@ -310,6 +312,27 @@ parameters:
     label: Additional Heat Wait Condition Notify Curl Options
     description: Additional options for the heat wait condition signals sent via curl
     default: None
+conditions:
+  mgmt_ip1:
+    not:
+      equals:
+        - get_param: bigip1_mgmt_IP
+        - None
+  mgmt_ip2:
+    not:
+      equals:
+        - get_param: bigip2_mgmt_IP
+        - None
+  other_ips:
+    not:
+      equals:
+        - get_param: network_vlan_static_self_ips
+        - None
+  static_IP:
+    and:
+      - mgmt_ip1
+      - mgmt_ip2
+      - other_ips
 parameter_groups:
   - label: BIG-IP General Provisioning
     parameters:
@@ -475,8 +498,11 @@ resources:
     properties:
       network: { get_param: mgmt_network }
       fixed_ips:
-        - subnet_id: {get_param: mgmt_subnet}
-          ip_address: {get_param: bigip1_mgmt_IP}
+        if:
+          - static_IP
+          - - subnet_id: {get_param: mgmt_subnet}
+              ip_address: {get_param: bigip1_mgmt_IP}
+          - - subnet_id: {get_param: mgmt_subnet}
       security_groups:
         - { get_attr: [mgmt_security_group, mgmt_security_group_id] }
   bigip_nnic_handler_bigip1:
@@ -485,7 +511,12 @@ resources:
       bigip_nic_count: { get_param: bigip_nic_count }
       network_vlan_names: { get_param: network_vlan_names }
       network_vlan_subnets: { get_param: [network_vlan_subnets, 0] }
-      network_vlan_static_self_ips: { get_param: [network_vlan_static_self_ips, 0] }
+      #network_vlan_static_self_ips: { get_param: [network_vlan_static_self_ips, 0] }
+      network_vlan_static_self_ips:
+        if:
+          - static_IP
+          - get_param: [network_vlan_static_self_ips, 0]
+          - None      
       network_vlan_security_group_ids: { get_attr: [security_groups, security_group_id] }
       bigip_vlan_names: { get_param: bigip_vlan_names }
       bigip_vlan_tags: { get_param: bigip_vlan_tags }
@@ -634,8 +665,11 @@ resources:
     properties:
       network: { get_param: mgmt_network }
       fixed_ips:
-        - subnet_id: {get_param: mgmt_subnet}
-          ip_address: {get_param: bigip2_mgmt_IP}
+        if:
+          - static_IP
+          - - subnet_id: {get_param: mgmt_subnet}
+              ip_address: {get_param: bigip2_mgmt_IP}
+          - - subnet_id: {get_param: mgmt_subnet}
       security_groups:
         - { get_attr: [mgmt_security_group, mgmt_security_group_id] }
   bigip_nnic_handler_bigip2:
@@ -644,7 +678,12 @@ resources:
       bigip_nic_count: { get_param: bigip_nic_count }
       network_vlan_names: { get_param: network_vlan_names }
       network_vlan_subnets: { get_param: [network_vlan_subnets, 1] }
-      network_vlan_static_self_ips: { get_param: [network_vlan_static_self_ips, 1] }
+      #network_vlan_static_self_ips: { get_param: [network_vlan_static_self_ips, 1] }
+      network_vlan_static_self_ips:
+        if:
+          - static_IP
+          - get_param: [network_vlan_static_self_ips, 1]
+          - None
       network_vlan_security_group_ids: { get_attr: [security_groups, security_group_id] }
       bigip_vlan_names: { get_param: bigip_vlan_names }
       bigip_vlan_tags: { get_param: bigip_vlan_tags }
