--- a/experimental/networks/bigip_nnic_handler.yaml
+++ b/experimental/networks/bigip_nnic_handler.yaml
@@ -20,8 +20,7 @@ parameters:
     type: comma_delimited_list
     label: Fixed IPs to map to the BIG-IP
     description: Fixed IPs for the corresponding VLANs.
-    default:
-      -
+    default: ""
   network_vlan_security_group_ids:
     type: comma_delimited_list
     label: Security Group IDs
