--- a/experimental/networks/bigip_neutron_port.yaml
+++ b/experimental/networks/bigip_neutron_port.yaml
@@ -24,8 +24,14 @@ parameters:
     type: comma_delimited_list
     label: Fixed Static IPs
     description: A list of Fixed IPs
-    default:
-      -
+    default: ""
+    
+conditions:
+  fixed_IP:
+     not:
+       equals:
+         - get_param: network_static_self_ips
+         - ""
 
 resources:
   bigip_neutron_port:
@@ -38,20 +44,43 @@ resources:
         - ip_address: 0.0.0.0/0
         - ip_address: ::/0
       fixed_ips:
-        repeat:
-          for_each:
-            <%subnet%>:
-              str_split:
-                - ';'
-                - { get_param: [network_subnets, { get_param: index }] }
-            <%ip_address%>:
-              str_split:
-                - ';'
-                - { get_param: [network_static_self_ips, { get_param: index }] }
-          template:
-            subnet: <%subnet%>
-            ip_address: <%ip_address%>
-
+        if:
+          - fixed_IP
+          - repeat:
+              for_each:
+                <%subnet%>:
+                  str_split:
+                    - ';'
+                    - { get_param: [network_subnets, { get_param: index }] }
+                <%ip_address%>:
+                  str_split:
+                    - ';'
+                    - { get_param: [network_static_self_ips, { get_param: index }] }
+              template:
+                subnet: <%subnet%>
+                ip_address: <%ip_address%>
+          - repeat:
+              for_each:
+                <%subnet%>:
+                  str_split:
+                    - ';'
+                    - { get_param: [network_subnets, { get_param: index }] }
+              template:
+                subnet: <%subnet%>
+#      fixed_ips:
+#        repeat:
+#          for_each:
+#            <%subnet%>:
+#              str_split:
+#                - ';'
+#                - { get_param: [network_subnets, { get_param: index }] }
+#            <%ip_address%>:
+#              str_split:
+#                - ';'
+#                - { get_param: [network_static_self_ips, { get_param: index }] }
+#          template:
+#            subnet: <%subnet%>
+#            ip_address: <%ip_address%>
 outputs:
   neutron_port_id:
     value: {get_resource: bigip_neutron_port}
