--- a/experimental/networks/bigip_neutron_port.yaml
+++ b/experimental/networks/bigip_neutron_port.yaml
@@ -21,17 +21,17 @@ parameters:
     label: Network Subnets
     description: A list of subnets the ports should be created in
   network_static_self_ips:
-    type: comma_delimited_list
+    type: json
     label: Fixed Static IPs
     description: A list of Fixed IPs
-    default: ""
+    default: []
     
 conditions:
   fixed_IP:
      not:
        equals:
          - get_param: network_static_self_ips
-         - ""
+         - []
 
 resources:
   bigip_neutron_port:
@@ -67,20 +67,6 @@ resources:
                     - { get_param: [network_subnets, { get_param: index }] }
               template:
                 subnet: <%subnet%>
-#      fixed_ips:
-#        repeat:
-#          for_each:
-#            <%subnet%>:
-#              str_split:
-#                - ';'
-#                - { get_param: [network_subnets, { get_param: index }] }
-#            <%ip_address%>:
-#              str_split:
-#                - ';'
-#                - { get_param: [network_static_self_ips, { get_param: index }] }
-#          template:
-#            subnet: <%subnet%>
-#            ip_address: <%ip_address%>
 outputs:
   neutron_port_id:
     value: {get_resource: bigip_neutron_port}
