--- a/experimental/networks/bigip_neutron_port.yaml
+++ b/experimental/networks/bigip_neutron_port.yaml
@@ -1,5 +1,4 @@
-heat_template_version: newton
-#heat_template_version: 2016-04-08
+heat_template_version: ocata
 
 description: This template creates a standard neutron port to associate with a Big-IP instance. This template uses an index parameter that enables ports to be created as part of a resource group.
 
