--- a/experimental/networks/bigip_nnic_handler.yaml
+++ b/experimental/networks/bigip_nnic_handler.yaml
@@ -1,5 +1,4 @@
-heat_template_version: newton
-#heat_template_version: 2016-04-08
+heat_template_version: ocata
 
 description: This template builds components for dynamic number of nics.
 
@@ -17,10 +16,10 @@ parameters:
     label: OS Neutron Subnets to map to the BIG-IP VLANs
     description: The Neutron Subnets for the corresponding BIG-IP VLANs.
   network_vlan_static_self_ips:
-    type: comma_delimited_list
+    type: json
     label: Fixed IPs to map to the BIG-IP
     description: Fixed IPs for the corresponding VLANs.
-    default: ""
+    default: []
   network_vlan_security_group_ids:
     type: comma_delimited_list
     label: Security Group IDs
@@ -60,6 +59,12 @@ parameters:
     description: Additonal options to add to curl_cli value of the WaitConditionHandle that enables status signals to be sent back to Heat
     default: None
 
+conditions:
+  static_IP:
+    not:
+      equals:
+        - get_param: network_vlan_static_self_ips
+        - []
 
 resources:
 
@@ -70,6 +75,10 @@ resources:
       network_names: { get_param: network_vlan_names }
       network_subnets: { get_param: network_vlan_subnets }
       network_static_self_ips: { get_param: network_vlan_static_self_ips }
+        if:
+          - static_IP
+          - get_param: network_vlan_static_self_ips
+          - []
       security_group_ids: { get_param: network_vlan_security_group_ids }
 
   onboard_network_config:
