--- a/experimental/networks/bigip_nnic_handler.yaml
+++ b/experimental/networks/bigip_nnic_handler.yaml
@@ -74,7 +74,7 @@ resources:
       count: { get_param: bigip_nic_count }
       network_names: { get_param: network_vlan_names }
       network_subnets: { get_param: network_vlan_subnets }
-      network_static_self_ips: { get_param: network_vlan_static_self_ips }
+      network_static_self_ips:
         if:
           - static_IP
           - get_param: network_vlan_static_self_ips
