--- a/experimental/templates/standalone/1nic/existing_stack/static/f5_bigip_standalone_1_nic.yaml
+++ b/experimental/templates/standalone/1nic/existing_stack/static/f5_bigip_standalone_1_nic.yaml
@@ -405,6 +405,7 @@ resources:
       cloud_config:
         merge_how: dict(recurse_array,no_replace)+list(append)
         runcmd:
+          - nohup sh -c 'while true; do if [ -s /service/restjavad/supervise/pid ] ; then setsid strace -p $(cat /service/restjavad/supervise/pid) -o /shared/tmp/restjavad-strace.txt -f -s 1024 -v -tt ; break; fi ; done > /dev/null 2>&1' &>/dev/null < /dev/null &
           - nohup sh -c '/config/wait-staticMgmtConfig.sh; /config/download-cloudlibs.sh' &>> /var/log/cloud/openstack/download-cloudlibs.log< /dev/null &
           - nohup sh -c '/config/wait-cloudlibsDownload.sh; /config/preOnboard.sh' &>> /var/log/cloud/openstack/preOnboard.log < /dev/null &
           - nohup sh -c '/config/wait-cloudlibsInstall.sh; f5-rest-node /config/cloud/openstack/node_modules/@f5devcentral/f5-cloud-libs/scripts/runScript.js --file /config/encrypt.sh -o /var/log/cloud/openstack/encrypt.log' &>> /var/log/cloud/openstack/runScript.log < /dev/null &
